[tool.poetry]
name = "repl-nix-random-number-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_random_number_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
