[tool.poetry]
name = "repl-nix-random-number-generator"
description = ""
authors = ["Alexander Baranov sasha.craftyshark@gmail.com"]
readme = "README.md"
packages = [{include = "repl_nix_random_number_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
better-profanity = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
